package model;

public enum Role {
    STUDENT,
    EVALUATOR,
    COORDINATOR,
    ADMIN;
}
