package model;

public enum SeminarStatus {
    DRAFT,
    OPEN,
    CLOSED,
    COMPLETED
}
